Closed Bug 395961 Opened 17 years ago Closed 16 years ago

Shouldn't show full path to handler executable in Launch Application dialog (show 'pretty name' instead)

Categories

(Firefox :: File Handling, defect, P2)

x86
Windows Vista
defect

Tracking

()

VERIFIED FIXED
Firefox 3

People

(Reporter: stephend, Assigned: jimm)

References

()

Details

Attachments

(2 files, 2 obsolete files)

Build ID: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a8pre) Gecko/2007091204 Minefield/3.0a8pre

Summary: Shouldn't show full path to handler executable in Launch Application dialog (show 'pretty name' instead)

Steps to Reproduce:

1. Click on http://phobos.apple.com/WebObjects/MZStore.woa/wa/storeFront
2. Note the resulting dialog that comes up (attached)

Expected Results:

I think we should show the pretty name, instead ("iTunes")

Actual Results:

See screenshot, which shows that we display the full path name to the application's executable, even with its arguments
Flags: blocking-firefox3?
I wonder if we're getting that ugly name from the OS.
Flags: blocking-firefox3? → blocking-firefox3+
Isn't this a dupe?  I could swear I approved a patch for something really similar in the last week or so.
If it's the patch I think it is, that was in application prefs for helper apps. This looks like a path cleanup problem someplace in the helper app / mime info stuff.
Target Milestone: --- → Firefox 3 M11
I've been doing some work in nsOSHelperAppService, and noticed the implementation of GetApplicationDescription (overidden in /win) falls back on the full path in cases where GetDefaultAppInfo failes to find the target file. This must be the cause of what's happening here.
Assignee: nobody → jmathies
Priority: -- → P3
Hey Stephen, is this a reproducible bug that occurs on a common file type on all systems, or was this a onetime thing on a single machine?
(In reply to comment #6)
> Hey Stephen, is this a reproducible bug that occurs on a common file type on
> all systems, or was this a onetime thing on a single machine?

This occurs on both Windows XP and Vista, in fresh Virtual Machines.
Priority: P3 → P5
Flags: wanted-firefox3+
Flags: blocking-firefox3-
Flags: blocking-firefox3+
Priority: P5 → P4
Target Milestone: Firefox 3 Mx → Firefox 3 M11
The patch in 397678 should address this.
Depends on: 397678
Removing dependency on bug 397678. See comments there for details - this is more critical than the Vista stuff.
No longer depends on: 397678
Priority: P4 → P2
Status: NEW → ASSIGNED
This should work much better than the previous routine and also sets things up for bug 397678.

I haven't come across the use of anything besides a dll or exe for a handler, but if we did find that it would be easy to add additional cases.
(Note, GetDefaultAppInfo didn't change I just moved it.)
Attachment #300425 - Flags: review?(robert.bugzilla)
Blocks: 397678
Comment on attachment 300425 [details] [diff] [review]
cleanup cmd handler path patch v.1

Looks good! I'd appreciate additional comments regarding why we have to do it this way so it is obvious that this handles the case where the registry entry is not per the msdn spec.
Attachment #300425 - Flags: review?(robert.bugzilla) → review+
added commenting, and added support for .cpl which is used for windows card spaces. (downloaded .cpd files).

I ran a test app with this parsing functionality across every command handler in my laptop reg - it really did a nice job of parsing these things up. The older code didn't do as well.
Attachment #300425 - Attachment is obsolete: true
Attachment #300556 - Flags: superreview?(dmose)
- addressed rare 'rundll32' entries on 2K
- split out functionality in CleanupCmdHandlerPath into two functions with better commenting
- addressed rare occurance of quotes around rundll handler: ["rundll32.exe" -foo]
- tested on Vista/XP/2K
Attachment #300556 - Attachment is obsolete: true
Attachment #300556 - Flags: superreview?(dmose)
Attachment #301938 - Flags: superreview?(dmose)
Attachment #301938 - Flags: superreview?(dmose) → superreview?(cbiesinger)
This should land for Fx3. It's a major UE bug. If you look at the screen shot of iTunes I think you'll see how important it is.
Flags: blocking-firefox3- → blocking-firefox3?
Target Milestone: Firefox 3 beta3 → Firefox 3
Flags: blocking-firefox3? → blocking-firefox3+
Whiteboard: [has patch][needs sr biesi]
Attachment #301938 - Flags: superreview?(cbiesinger) → superreview+
Thanks biesi!
Whiteboard: [has patch][needs sr biesi] → checkin-neeeded
Whiteboard: checkin-neeeded
ok, already has blocking-firefox3 so I guess were ok to go.
Keywords: checkin-needed
Whiteboard: [has patch][has reviews]
Checking in uriloader/exthandler/win/nsOSHelperAppService.cpp;
/cvsroot/mozilla/uriloader/exthandler/win/nsOSHelperAppService.cpp,v  <--  nsOSHelperAppService.cpp
new revision: 1.83; previous revision: 1.82
done
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [has patch][has reviews]
Verified FIXED using Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9pre) Gecko/2008041907 Minefield/3.0pre
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: