Bug 395961 - "Shouldn't show full path to handler executable in Launch Application dialog (show 'pretty name' instead)" (cleanup cmd handler path) [p=jmathies@mozilla.com (Jim Mathies) r=rob_strong sr=biesi a=blocking-firefox3+]